# sweat-review

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
landing/: components.json  index.html  package-lock.json  package.json  vite.config.ts
landing/src/: App.tsx  index.css  main.tsx
landing/src/components/: mode-toggle.tsx
sample-app/: docker-compose.override.yml  docker-compose.yml
sample-app/backend/: Dockerfile  app.py
sample-app/frontend/: index.html
sample-app/nginx/: nginx.conf
src/preview_agent/: cleanup.py  compose.py  config.py  dashboard.py  github_client.py  health.py  main.py  orchestrator.py  poller.py  resources.py  state.py  webhook.py
src/sweat_review/: cleanup.py  compose.py  config.py  dashboard.py  github_client.py  health.py  main.py  orchestrator.py  poller.py  resources.py
src/sweat_review/compose_check/: __init__.py  checker.py  models.py  output.py  rules.py
src/sweat_review/data/: env.example  traefik-compose.yml
templates/: docker-compose.override.yml.j2
tests/: conftest.py  test_cleanup.py  test_compose.py  test_compose_check.py  test_dashboard.py  test_github_client.py  test_integration.py  test_orchestrator.py  test_poller.py  test_resources.py  test_state.py  test_webhook.py
tests/fixtures/: clean.yml  problematic.yml  warnings-only.yml
