[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sweat-review"
version = "0.1.1"
description = "Self-hosted ephemeral preview environments for GitHub PRs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "jinja2>=3.1",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
sweat-review = "sweat_review.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sweat_review"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
